# minimatrix

./: .gitignore  README.md  pyproject.toml
src/minimatrix/: matrix.py  operations.py  sparse.py  utils.py
src/minimatrix.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_matrix.py
