[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "minimatrix"
version = "0.1.0"
authors = [
    {name = "Nishad Mansoor", email = "nishadmansoor02@gmail.com"}
]
description = "A lightweight educational Python package for basic matrix operations."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["matrix", "linear algebra", "education", "data science"]
license = {text = "MIT"}
